Fix Conversation V2 CI regressions